--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -55,13 +55,8 @@
   </main>
 
   <footer>
-    <p>&copy; 2023 Destination Catalogue. G.Georgieva - All rights reserved.</p>
-      <div id="connect">
-          <a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
-          <a href="https://www.instagram.com/" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://twitter.com/" target="_blank" class="twitter"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#" target="_blank" class="googleplus"><i class="fa-brands fa-google-plus"></i></a>
-      </div>
+    <p>&copy; 2023 PawRescue. Vanesa Kuleva.</p>
+
   </footer>
 </body>
 </html>
