--- a/templates/user/details-account.html
+++ b/templates/user/details-account.html
@@ -1,10 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'common/index.html' %}
 
-</body>
-</html>
+{% block content %}
+    <div class="form_div">
+        <img src="{{ profile.picture }}" alt="" width="200" height="200">
+        <p>First Name: {{ object.first_name }}</p>
+        <p>Last Name: {{ object.last_name }}</p>
+        <p>Email: {{ object.email }}</p>
+        <p>Age: {{ object.age }}</p>
+        <p>Age: {{ object.age }}</p>
+
+        <div>
+            <a href="#">
+                <button class="button">Edit</button>
+            </a>
+            <a class="anchor" href="#">
+                <button class="button">Delete</button>
+            </a>
+            <a class="anchor" href="#">
+                <button class="button">Change Password</button>
+            </a>
+        </div>
+    </div>
+{% endblock %}
