--- a/templates/user/details-account.html
+++ b/templates/user/details-account.html
@@ -5,8 +5,7 @@
         <img src="{{ profile.picture }}" alt="" width="200" height="200">
         <p>First Name: {{ object.first_name }}</p>
         <p>Last Name: {{ object.last_name }}</p>
-        <p>Email: {{ object.email }}</p>
-        <p>Age: {{ object.age }}</p>
+        <p>Email: {{ object.user.email }}</p>
         <p>Age: {{ object.age }}</p>
 
         <div>
