--- a/templates/user/edit-account.html
+++ b/templates/user/edit-account.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Edit Account</title>
 </head>
 <body>
-
+    <h2>Edit Account</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Save Changes</button>
+    </form>
 </body>
 </html>
