--- a/templates/user/logout.html
+++ b/templates/user/logout.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Logout Confirmation</title>
 </head>
 <body>
-
+    <h2>Are you sure you want to log out?</h2>
+    <form action="{% url 'logout_confirm' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Yes, Log out</button>
+    </form>
 </body>
 </html>
