--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -2,17 +2,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Pets</title>
-    <link rel="stylesheet" href="{% static 'styles/styles.css' %}"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=\, initial-scale=1.0"/>
+    <link rel="stylesheet" href= "{% static 'cs/styles.css' %}" />
 </head>
 
   <body>
   <header>
       <div id="logo">
-        <img src="{% static 'images/clipart904585.png' %}"/>
+        <img src="{% static 'images/wepik-vintage-serif-typo-animal-badge-logo-20230709081847MMVF copy.png' %}" alt=""/>
         <a href="{% url 'index' %}">Home</a>
       </div>
 
