--- a/templates/user/delete-account.html
+++ b/templates/user/delete-account.html
@@ -1,14 +1,12 @@
-{% extends 'common/index.html' %}
+{% load static %}
+
+{% extends "common/index.html" %}
 
 {% block content %}
-    <div class="destination-catalogue">
-        <h1>Are you sure you want to delete your profile?</h1>
-        <form method="post">
-        {% csrf_token %}
-            <div class="btns-logout">
-                <button class="btn" type="submit"><a>Yes</a></button>
-                <button class="btn" type="submit"><a>No</a></button>
-            </div>
-        </form>
-    </div>
+  <h1>Delete Account</h1>
+  <p>Are you sure you want to delete your account?</p>
+  <form method="post">
+    {% csrf_token %}
+    <input type="submit" value="Delete">
+  </form>
 {% endblock %}
