--- a/templates/user/delete-account.html
+++ b/templates/user/delete-account.html
@@ -1,6 +1,4 @@
-{% load static %}
-
-{% extends "common/index.html" %}
+{% extends 'common/index.html' %}
 
 {% block content %}
   <h1>Delete Account</h1>
