--- a/staticfiles/css/forms.css
+++ b/staticfiles/css/forms.css
@@ -1,139 +1,365 @@
-body {
-	background: #FFF;
-	padding: 1rem;
-}
+/** {*/
+/*  padding: 0;*/
+/*  margin: 0;*/
+/*  color: #1a1f36;*/
+/*  box-sizing: border-box;*/
+/*  word-wrap: break-word;*/
+/*  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Ubuntu,sans-serif;*/
+/*}*/
+/*body {*/
+/*    min-height: 100%;*/
+/*    background-color: #ffffff;*/
+/*}*/
+/*h1 {*/
+/*    letter-spacing: -1px;*/
+/*}*/
+/*a {*/
+/*  color: #5469d4;*/
+/*  text-decoration: unset;*/
+/*}*/
+/*.login-root {*/
+/*    background: #fff;*/
+/*    display: flex;*/
+/*    width: 100%;*/
+/*    min-height: 100vh;*/
+/*    overflow: hidden;*/
+/*}*/
+/*.loginbackground {*/
+/*    min-height: 692px;*/
+/*    position: fixed;*/
+/*    bottom: 0;*/
+/*    left: 0;*/
+/*    right: 0;*/
+/*    top: 0;*/
+/*    z-index: 0;*/
+/*    overflow: hidden;*/
+/*}*/
+/*.flex-flex {*/
+/*    display: flex;*/
+/*}*/
+/*.align-center {*/
+/*  align-items: center;*/
+/*}*/
+/*.center-center {*/
+/*  align-items: center;*/
+/*  justify-content: center;*/
+/*}*/
+/*.box-root {*/
+/*    box-sizing: border-box;*/
+/*}*/
+/*.flex-direction--column {*/
+/*    -ms-flex-direction: column;*/
+/*    flex-direction: column;*/
+/*}*/
 
-form {
-	max-width: 30rem;
-}
-
-form, form fieldset, form legend, form label, form input, form select {
-	display: block;
-	width: 100%;
-	border: none;
-	padding: 0.4rem;
-}
-
-form textarea {
-	border: none;
-	background: white;
-	display: block;
-	width: 100%;
-	padding: 0.4rem;
-}
-
-form fieldset {
-	border: 2px solid #666;
-	border-radius: 1rem;
-	box-shadow: 0 0 1rem 2rem rgba(0, 0, 0, 0.1);
-}
-form legend {
-	border: 2px solid #666;
-	background-color: #234465;
-	color: white;
-	border-radius: 1rem;
-	box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.1);
-}
-
-form fieldset {
-	padding: 1em 2em 2em 2em;
-	position: relative;
-}
-
-form legend {
-	width: 30%;
-	padding: 0.5rem 1rem;
-	left: -1px;
-	top: -1.4rem;
-	position: absolute;
-}
-
-form label {
-	font-weight: bold;
-}
-
-
-.field .input {
-	display: flex;
-	position: relative;
-	align-items: center;
-	border: 1px solid;
-	border-radius: 5px;
-}
-
-.field .input:after {
-	display: block;
-	content: '';
-}
-
-.field .input input {
-	border: none;
-	flex: 1 1 auto;
-	padding: 0.4rem;
-	outline: none;
-	background: transparent;
-	z-index: 2;
-	order: 2;
-}
-
-.field .input .fas {
-	z-index: 2;
-	position: relative;
-	padding: 0 0 0 0.8rem;
-	font-size: 0.9em;
-	order: 1;
-}
-
-.field .input input+.actions {
-	display: block;
-	background: #FFF;
-	border: 1px solid #CCC;
-	border-radius: 0.3rem;
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	z-index: 1;
-}
-
-.field .input input:focus {
-	border-color: #090;
-}
-
-.field .input input:focus+.fas {
-	color: #090;
-}
+/*.box-divider--light-all-2 {*/
+/*    box-shadow: inset 0 0 0 2px #e3e8ee;*/
+/*}*/
+/*.box-background--blue {*/
+/*    background-color: #5469d4;*/
+/*}*/
+/*.box-background--white {*/
+/*  background-color: #ffffff;*/
+/*}*/
+/*.box-background--blue800 {*/
+/*    background-color: #212d63;*/
+/*}*/
+/*.box-background--gray100 {*/
+/*    background-color: #e3e8ee;*/
+/*}*/
+/*.box-background--cyan200 {*/
+/*    background-color: #7fd3ed;*/
+/*}*/
+/*.padding-top--64 {*/
+/*  padding-top: 64px;*/
+/*}*/
+/*.padding-top--24 {*/
+/*  padding-top: 24px;*/
+/*}*/
+/*.padding-top--48 {*/
+/*  padding-top: 48px;*/
+/*}*/
+/*.padding-bottom--24 {*/
+/*  padding-bottom: 24px;*/
+/*}*/
+/*.padding-horizontal--48 {*/
+/*  padding: 48px;*/
+/*}*/
+/*.padding-bottom--15 {*/
+/*  padding-bottom: 15px;*/
+/*}*/
 
 
-form textarea:focus {
-	outline: none;
-	border-color: #090;
-}
+/*.flex-justifyContent--center {*/
+/*  -ms-flex-pack: center;*/
+/*  justify-content: center;*/
+/*}*/
 
-.description {
-	width: 17rem;
-	height: 10vh;
-	padding: 2rem;
-	overflow: auto;
-}
-.book-description {
-	width: 30rem;
-	padding: 2rem;
-	overflow: auto;
-	text-align: justify;
-}
+/*.formbg {*/
+/*    margin: 0px auto;*/
+/*    width: 100%;*/
+/*    max-width: 448px;*/
+/*    background: white;*/
+/*    border-radius: 4px;*/
+/*    box-shadow: rgba(60, 66, 87, 0.12) 0px 7px 14px 0px, rgba(0, 0, 0, 0.12) 0px 3px 6px 0px;*/
+/*}*/
+/*span {*/
+/*    display: block;*/
+/*    font-size: 20px;*/
+/*    line-height: 28px;*/
+/*    color: #1a1f36;*/
+/*}*/
+/*label {*/
+/*    margin-bottom: 10px;*/
+/*}*/
+/*.reset-pass a,label {*/
+/*    font-size: 14px;*/
+/*    font-weight: 600;*/
+/*    display: block;*/
+/*}*/
+/*.reset-pass > a {*/
+/*    text-align: right;*/
+/*    margin-bottom: 10px;*/
+/*}*/
+/*.grid--50-50 {*/
+/*    display: grid;*/
+/*    grid-template-columns: 50% 50%;*/
+/*    align-items: center;*/
+/*}*/
 
-.details {
-	display: flex;
-	justify-content: center;
-}
+/*.field input {*/
+/*    font-size: 16px;*/
+/*    line-height: 28px;*/
+/*    padding: 8px 16px;*/
+/*    width: 100%;*/
+/*    min-height: 44px;*/
+/*    border: unset;*/
+/*    border-radius: 4px;*/
+/*    outline-color: rgb(84 105 212 / 0.5);*/
+/*    background-color: rgb(255, 255, 255);*/
+/*    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(60, 66, 87, 0.16) 0px 0px 0px 1px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px;*/
+/*}*/
 
-.details .type {
-	margin: 5px;
-	font-size: 20px;
-}
+/*input[type="submit"] {*/
+/*    background-color: rgb(84, 105, 212);*/
+/*    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0.12) 0px 1px 1px 0px,*/
+/*                rgb(84, 105, 212) 0px 0px 0px 1px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(0, 0, 0, 0) 0px 0px 0px 0px,*/
+/*                rgba(60, 66, 87, 0.08) 0px 2px 5px 0px;*/
+/*    color: #fff;*/
+/*    font-weight: 600;*/
+/*    cursor: pointer;*/
+/*}*/
+/*.field-checkbox input {*/
+/*    width: 20px;*/
+/*    height: 15px;*/
+/*    margin-right: 5px;*/
+/*    box-shadow: unset;*/
+/*    min-height: unset;*/
+/*}*/
+/*.field-checkbox label {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    margin: 0;*/
+/*}*/
+/*a.ssolink {*/
+/*    display: block;*/
+/*    text-align: center;*/
+/*    font-weight: 600;*/
+/*}*/
+/*.footer-link span {*/
+/*    font-size: 14px;*/
+/*    text-align: center;*/
+/*}*/
+/*.listing a {*/
+/*    color: #697386;*/
+/*    font-weight: 600;*/
+/*    margin: 0 10px;*/
+/*}*/
 
-.field .input:hover {
-	background: #c4c1c1;
-}
+/*.animationRightLeft {*/
+/*  animation: animationRightLeft 2s ease-in-out infinite;*/
+/*}*/
+/*.animationLeftRight {*/
+/*  animation: animationLeftRight 2s ease-in-out infinite;*/
+/*}*/
+/*.tans3s {*/
+/*  animation: animationLeftRight 3s ease-in-out infinite;*/
+/*}*/
+/*.tans4s {*/
+/*  animation: animationLeftRight 4s ease-in-out infinite;*/
+/*}*/
+
+/*@keyframes animationLeftRight {*/
+/*  0% {*/
+/*    transform: translateX(0px);*/
+/*  }*/
+/*  50% {*/
+/*    transform: translateX(1000px);*/
+/*  }*/
+/*  100% {*/
+/*    transform: translateX(0px);*/
+/*  }*/
+/*}*/
+
+/*@keyframes animationRightLeft {*/
+/*  0% {*/
+/*    transform: translateX(0px);*/
+/*  }*/
+/*  50% {*/
+/*    transform: translateX(-1000px);*/
+/*  }*/
+/*  100% {*/
+/*    transform: translateX(0px);*/
+/*  }*/
+/*}*/
+
+
+/*body {*/
+/*	background: #FFF;*/
+/*	padding: 1rem;*/
+/*}*/
+
+/*form {*/
+/*	max-width: 30rem;*/
+/*}*/
+
+/*form, form fieldset, form legend, form label, form input, form select {*/
+/*	display: block;*/
+/*	width: 100%;*/
+/*	border: none;*/
+/*	padding: 0.4rem;*/
+/*}*/
+
+/*form textarea {*/
+/*	border: none;*/
+/*	background: white;*/
+/*	display: block;*/
+/*	width: 100%;*/
+/*	padding: 0.4rem;*/
+/*}*/
+
+/*form fieldset {*/
+/*	border: 2px solid #666;*/
+/*	border-radius: 1rem;*/
+/*	box-shadow: 0 0 1rem 2rem rgba(0, 0, 0, 0.1);*/
+/*}*/
+/*form legend {*/
+/*	border: 2px solid #666;*/
+/*	background-color: #234465;*/
+/*	color: white;*/
+/*	border-radius: 1rem;*/
+/*	box-shadow: 0 0 1rem 0.1rem rgba(0, 0, 0, 0.1);*/
+/*}*/
+
+/*form fieldset {*/
+/*	padding: 1em 2em 2em 2em;*/
+/*	position: relative;*/
+/*}*/
+
+/*form legend {*/
+/*	width: 30%;*/
+/*	padding: 0.5rem 1rem;*/
+/*	left: -1px;*/
+/*	top: -1.4rem;*/
+/*	position: absolute;*/
+/*}*/
+
+/*form label {*/
+/*	font-weight: bold;*/
+/*}*/
+
+
+/*.field .input {*/
+/*	display: flex;*/
+/*	position: relative;*/
+/*	align-items: center;*/
+/*	border: 1px solid;*/
+/*	border-radius: 5px;*/
+/*}*/
+
+/*.field .input:after {*/
+/*	display: block;*/
+/*	content: '';*/
+/*}*/
+
+/*.field .input input {*/
+/*	border: none;*/
+/*	flex: 1 1 auto;*/
+/*	padding: 0.4rem;*/
+/*	outline: none;*/
+/*	background: transparent;*/
+/*	z-index: 2;*/
+/*	order: 2;*/
+/*}*/
+
+/*.field .input .fas {*/
+/*	z-index: 2;*/
+/*	position: relative;*/
+/*	padding: 0 0 0 0.8rem;*/
+/*	font-size: 0.9em;*/
+/*	order: 1;*/
+/*}*/
+
+/*.field .input input+.actions {*/
+/*	display: block;*/
+/*	background: #FFF;*/
+/*	border: 1px solid #CCC;*/
+/*	border-radius: 0.3rem;*/
+/*	position: absolute;*/
+/*	top: 0;*/
+/*	left: 0;*/
+/*	right: 0;*/
+/*	bottom: 0;*/
+/*	z-index: 1;*/
+/*}*/
+
+/*.field .input input:focus {*/
+/*	border-color: #090;*/
+/*}*/
+
+/*.field .input input:focus+.fas {*/
+/*	color: #090;*/
+/*}*/
+
+
+/*form textarea:focus {*/
+/*	outline: none;*/
+/*	border-color: #090;*/
+/*}*/
+
+/*.description {*/
+/*	width: 17rem;*/
+/*	height: 10vh;*/
+/*	padding: 2rem;*/
+/*	overflow: auto;*/
+/*}*/
+/*.book-description {*/
+/*	width: 30rem;*/
+/*	padding: 2rem;*/
+/*	overflow: auto;*/
+/*	text-align: justify;*/
+/*}*/
+
+/*.details {*/
+/*	display: flex;*/
+/*	justify-content: center;*/
+/*}*/
+
+/*.details .type {*/
+/*	margin: 5px;*/
+/*	font-size: 20px;*/
+/*}*/
+
+/*.field .input:hover {*/
+/*	background: #c4c1c1;*/
+/*}*/
