--- a/staticfiles/css/navigation.css
+++ b/staticfiles/css/navigation.css
@@ -1,91 +1,41 @@
-/*nav.navbar {*/
-/*  display: flex;*/
-/*  flex-wrap: wrap;*/
-/*  justify-content: flex-end;*/
-/*  align-self: center;  */
-/*  letter-spacing: 0.05rem;*/
-/*  background: #234465;*/
-/*  padding: 0.8rem 1rem;*/
-/*  color: white;*/
-/*}*/
-/*#site-header > nav > section.navbar-dashboard > a{*/
-/*    list-style: none;*/
-/*    text-decoration: none;*/
-/*    align-self: center;*/
-/*    font-weight: bold;*/
-/*    font-size: 1.5rem;*/
-/*    color: white;*/
-/*}*/
-/*#site-header > nav > section.navbar-dashboard > form > input[type="text"],*/
-/*#site-header > nav > section.navbar-anonymous > ul > li:nth-child(1) > a,*/
-/*#site-header > nav > section.navbar-user > ul > li:nth-child(1),*/
-/*#site-header > nav > section.navbar-dashboard > ul > li:nth-child(1) > a{*/
-/*    margin-right: 0.5rem;*/
-/*}*/
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+nav a:hover {
+  color: rgb(234, 49, 124);
+  text-decoration: underline;
+}
 
+/* Footer Styles */
+footer {
+  background-color: #f8eaf3;
+  color:  rgb(226, 94, 158);
+  font-weight: bold;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  padding: 10px 0;
+}
+footer p {
+  margin: 0;
+}
 
-/*nav.navbar ul {*/
-/*  background: transparent;*/
-/*  padding: 0.5rem;*/
-/*  border-radius: 0.3rem;*/
-/*  margin: 0;*/
-/*}*/
-/*nav.navbar ul li {*/
-/*  display: block;*/
-/*  list-style: none outside;*/
-/*  position: relative;*/
-/*}*/
-/*nav.navbar ul li a {*/
-/*  display: block;*/
-/*  padding: 0.4rem 0.8rem;*/
-/*  border-radius: 0.4rem;*/
-/*  text-decoration: none;*/
-/*  font-weight: bold;*/
-/*  background: cadetblue;*/
-/*  color: rgb(255, 255, 255);*/
-/*}*/
-/*.button:hover,*/
-/*nav.navbar ul li a:hover,*/
-/*nav.navbar ul li:hover > a {*/
-/*  background: lightsalmon;*/
-/*  color: rgb(0, 0, 0);*/
-/*  font-weight: bold;*/
-/*}*/
+/* Home Page Styles */
+#home img {
+  display: block;
+  margin: auto;
+  height: 50%;
+  width: 50%;
+  transform: rotate(20deg);
+}
 
-/*.dashboard nav{*/
-/*    background: transparent;*/
-/*}*/
-/*.navbar-dashboard{*/
-/*    display: flex;*/
-/*    justify-content: space-between;    */
-/*    width: 100vw;*/
-/*}*/
-/*.navbar .first-bar{*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.navbar .first-bar a{*/
-/*    color: white;*/
-/*    margin-right: 0.5rem;*/
-/*}*/
-/*.navbar .first-bar input{  */
-/*    margin-right: 0.5rem;*/
-/*}*/
-/*#site-header > nav > section > div.first-bar > a:nth-child(1){*/
-/*    font-weight: bold;*/
-/*    font-size: 1.5rem;*/
-/*}*/
-/*.navbar .first-bar form{*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.navbar .second-bar ul{*/
-/*    display: flex;*/
-/*    align-items: center;*/
-/*}*/
-/*.navbar .second-bar ul li{*/
-/*    margin-right: 0.5rem;*/
-/*}*/
-/*.navbar-anonymous ul{*/
-/*    display: flex;*/
-/*}*/
+#home h1 {
+  margin-top: 20px;
+  font-style: italic;
+  font-size: 64px;
+  font-weight: 300;
+  text-align: center;
+  color: rgb(249, 113, 192);
+  text-transform: capitalize;
+}
