--- a/staticfiles/css/form.css
+++ b/staticfiles/css/form.css
@@ -1,16 +1,14 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
-/* Additional fonts for girly style */
-@import url('https://fonts.googleapis.com/css?family=Kaushan+Script|Pacifico');
 
 .login-page {
-  width: 360px;
+  width: 440px;
   padding: 8% 0 0;
   margin: auto;
 }
 
 .form {
-  background-color: #fcd4e6; /* Light pink background */
+  background-color: #fcd4e6;
   max-width: 440px;
   margin: auto;
   margin-top: 50px;
@@ -18,21 +16,22 @@
   padding: 45px;
   text-align: center;
   border-radius: 10px;
-  border: 1px solid #eca2bf; /* Darker pink border */
+  font-family: 'Quicksand', sans-serif;
+  border: 1px solid #eca2bf;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 .form h2 {
   margin-bottom: 50px;
   font-size: 30px;
-  color: #e67fba; /* Girly pink color */
-  font-family: 'Pacifico', cursive; /* Girly font */
+  color: #e67fba;
+  font-family: 'Quicksand', cursive;
 }
 
 .form input {
   border-radius: 10px;
   outline: 0;
-  background: #f8f4b4; /* Light yellow background for input */
+  background: #f8f4b4;
   width: 100%;
   height: 50px;
   border: 0;
@@ -40,39 +39,28 @@
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  font-family: 'Quicksand', sans-serif;
 }
 
 .form textarea {
-  background: #f8f4b4; /* Light yellow background for textarea */
+  background: #f8f4b4;
   border-radius: 10px;
-  border: 1px solid #e6e6e6; /* Light gray border for textarea */
+  border: 1px solid #e6e6e6;
   width: 99%;
   max-width: 99%;
   min-width: 99%;
   min-height: 50px;
   margin-bottom: 10px;
+  font-family: 'Quicksand', sans-serif;
 }
 
-
-/*.form button {*/
-/*  font-family: 'Kaushan Script', cursive; !* Girly font *!*/
-/*  text-transform: uppercase;*/
-/*  outline: 0;*/
-/*  background: #ff89c0; !* Lighter girly pink button background *!*/
-/*  width: 100%;*/
-/*  border: 2px solid #e67fba; !* Girly pink border *!*/
-/*  padding: 15px;*/
-/*  color: #ffffff;*/
-/*  font-size: 16px;*/
-/*  cursor: pointer;*/
-/*  border-radius: 50px; !* Rounded button *!*/
-/*  transition: background-color 0.3s ease-in-out; !* Smooth transition on hover *!*/
-/*}*/
-
-
+.form div label {
+  font-weight: normal;
+  color: #77184c !important;
+  font-family: 'Quicksand', sans-serif;
+}
 
 .form button {
-  /* Existing styles */
   align-items: center;
   background-color: #fee6e3;
   border: 2px solid #111;
@@ -94,31 +82,32 @@
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  transition: background-color 0.2s ease; /* Add a transition for background color */
+  transition: background-color 0.2s ease;
 }
 
-/* Remove the :after pseudo-element styles */
+
 .form button:after {
   display: none;
 }
 
-/* Change button color on hover */
+
 .form button:hover {
-  background: #e67fba; /* Lighter girly pink on hover */
+  background: #e67fba;
 }
 
-/* Change button color on active (when clicked) */
+
 .form button:active {
-  background-color: #f8f4b4; /* Lighter girly pink on active/clicked */
+  background-color: #f8f4b4;
   outline: 0;
 }
 
-/* Center the button horizontally and vertically */
+
 .form button {
   margin: 0 auto;
+  font-family: 'Quicksand', sans-serif;
 }
 
-/* Optional: Increase the padding for larger screens */
+
 @media (min-width: 768px) {
   .form button {
     padding: 0 40px;
@@ -126,8 +115,8 @@
 }
 
 .form button:focus {
-  background: #e67fba; /* Darker girly pink on focus */
-  border: 2px solid #ff89c0; /* Lighter girly pink border on focus */
+  background: #e67fba; /
+  border: 2px solid #ff89c0;
 }
 
 .container {
@@ -151,7 +140,7 @@
 }
 
 .form .message a {
-  color: #d93b99; /* Girly pink color for links */
+  color: #d93b99;
   text-decoration: none;
 }
 
@@ -159,11 +148,11 @@
   margin-top: -40px;
   margin-bottom: 0px;
   font-size: 30px;
-  color: #e67fba; /* Girly pink color */
-  font-family: 'Pacifico', cursive; /* Girly font */
+  color: #e67fba;
+  font-family: 'Quicksand', cursive;
 }
 
-.search-result > .fruit {
+.search-result >  .pet {
   scale: 0.5;
 }
 
