--- a/staticfiles/css/navigation.css
+++ b/staticfiles/css/navigation.css
@@ -1,10 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+
+nav a {
+ font-family: 'Quicksand', sans-serif;
+}
+
 nav a:hover {
   color: rgb(234, 49, 124);
   text-decoration: underline;
 }
-
-/* Footer Styles */
 footer {
   background-color: #f8eaf3;
   color:  rgb(226, 94, 158);
@@ -16,6 +19,7 @@ footer {
   width: 100%;
   height: 30px;
   padding: 10px 0;
+  font-family: 'Quicksand', sans-serif;
 }
 footer p {
   margin: 0;
