--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,51 +7,46 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <title>PawRescue</title>
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 
 <body>
     <div id="logo">
         <header>
-            <a id="logo" href="{% url 'index' %}">
-                <img id="logo-img" src="{% static '/images/logo.png' %}" alt="logo" />
-            </a>
-            <nav>
-                    {% if not user.is_authenticated %}
-                    <div class="guest">
-                        <a href="{% url 'register user' %}">Register</a>
-                        <a href="{% url 'login user' %}">LogIn</a>
-                        <a href="#">About</a>
-                        <a href="#">PetPosts</a>
-                    </div>
-                    {% else %}
-                    <!-- If user profile has NOT been created -->
-                    <div class="user">
-                        <a href="#">About</a>
-                        <a href="#">PetPosts</a>
-                        <a href="#">Add Post</a>
-                        <a href="{% url 'details user' pk=user.pk %}">Profile</a>
-                        <a href="{% url 'logout' %}">LogOut</a>
-                    </div>
-                    {% endif %}
+            <nav class="navigation">
+                <div class="logo">
+                    <img src="" alt="">
+                </div>
+                {% if user.is_authenticated %}s
+                <div class="user">
+                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">Pets</a>
+                    <a href="#" class="nav-link">Add Post</a>
+                    <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
+                    <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
+                </div>
+                {% else %}
+                <div class="guest">
+                    <a href="{% url 'register user' %}" class="nav-link">Register</a>
+                    <a href="{% url 'login user' %}" class="nav-link">Login</a>
+                    <a href="#" class="nav-link">About</a>
+                    <a href="#" class="nav-link">Pets</a>
+                </div>
+                {% endif %}
             </nav>
         </header>
-
         <main>
             {% block content %}
             {% if user.is_authenticated %}
-            <p> Welcome to our pet rescue website, where compassion and care come together to find loving homes for adorable furry friends.</p>
+            <p>Welcome to our pet rescue website, where compassion and care come together to find loving homes for adorable furry friends.</p>
             {% endif %}
             {% endblock %}
         </main>
     </div>
-
     <footer>
-        <p> &copy; 2023 PawRescue. Vanesa Kuleva. </p>
-
+        <p>&copy; 2023 PawRescue. Vanesa Kuleva.</p>
     </footer>
 </body>
 
 </html>
-
