--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div class="profile">
+    <h1 class="profile">Login</h1>
         <form class="form" method="post" action="">
             {% csrf_token %}
            {% for field in form %}
