--- a/templates/posts/post-details.html
+++ b/templates/posts/post-details.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
+
+
+    <h3>{{ pet.name }} - {{ pet.health_status }}</h3>
+<p>{{ pet.health_status_text }}</p>
 </head>
 <body>
 
