--- a/templates/user/edit-account.html
+++ b/templates/user/edit-account.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
-<html>
+{% extends 'common/index.html' %}
+s
+{% block content %}
+
 <head>
     <title>Edit Account</title>
 </head>
@@ -11,4 +13,5 @@
         <button type="submit">Save Changes</button>
     </form>
 </body>
-</html>
+
+{% endblock %}
