--- a/templates/common/index.html
+++ b/templates/common/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 {% load static %}
 
 <!DOCTYPE html>
@@ -9,44 +11,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PawRescue</title>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" >
 </head>
 
-<body>
-    <div id="logo">
-        <header>
-            <nav class="navigation">
-                <div class="logo">
-                    <img src="" alt="">
-                </div>
-                {% if user.is_authenticated %}s
-                <div class="user">
-                    <a href="#" class="nav-link">About</a>
-                    <a href="#" class="nav-link">Pets</a>
-                    <a href="#" class="nav-link">Add Post</a>
-                    <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
-                    <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
-                </div>
+<body style="background-image: url('{% static 'images/background.jpg' %}')">
+    <header>
+        <nav class="navigation">
+            <div class="logo">
+                <img src="" alt="">
+
+            </div>
+            <div class="nav-buttons">
+                {% if user.is_authenticated %}
+                <a href="#" class="nav-link">About</a>
+                <a href="#" class="nav-link">Pets</a>
+                <a href="#" class="nav-link">Add Post</a>
+                <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>
+                <a href="{% url 'logout' %}" class="nav-link">LogOut</a>
                 {% else %}
-                <div class="guest">
-                    <a href="{% url 'register user' %}" class="nav-link">Register</a>
-                    <a href="{% url 'login user' %}" class="nav-link">Login</a>
-                    <a href="#" class="nav-link">About</a>
-                    <a href="#" class="nav-link">Pets</a>
-                </div>
+                <a href="{% url 'register user' %}" class="nav-link">Register</a>
+                <a href="{% url 'login user' %}" class="nav-link">Login</a>
+                <a href="#" class="nav-link">About</a>
+                <a href="#" class="nav-link">Pets</a>
                 {% endif %}
-            </nav>
-        </header>
-        <main>
-            {% block content %}
-            {% if user.is_authenticated %}
-            <p>Welcome to our pet rescue website, where compassion and care come together to find loving homes for adorable furry friends.</p>
-            {% endif %}
-            {% endblock %}
-        </main>
-    </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        {% block content %}
+        {% if user.is_authenticated %}
+        <p> Welcome to our pet rescue website, where compassion and care come together to find loving homes for adorable furry friends.</p>
+        {% endif %}
+        {% endblock %}
+    </main>
     <footer>
         <p>&copy; 2023 PawRescue. Vanesa Kuleva.</p>
     </footer>
 </body>
 
 </html>
+
+
+
+
+{#<!-- index.html -->#}
+{##}
+{#{% load static %}#}
+{##}
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{##}
+{#<head>#}
+{#    <meta charset="UTF-8" />#}
+{#    <meta http-equiv="X-UA-Compatible" content="IE=edge" />#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0" />#}
+{#    <title>PawRescue</title>#}
+{#    <link rel="stylesheet" href="{% static 'css/styles.css' %}" />#}
+{#</head>#}
+{##}
+{#<body>#}
+{#    <div id="logo">#}
+{#        <header>#}
+{#            <nav class="navigation">#}
+{#                <div class="logo">#}
+{#                    <img src="{% static 'images/logo.png' %}" alt="">#}
+{#                    <p>Paw Rescue</p>#}
+{#                </div>#}
+{#                <div class="nav-buttons">#}
+{#                    {% if user.is_authenticated %}#}
+{#                    <a href="#" class="nav-link">About</a>#}
+{#                    <a href="#" class="nav-link">Pets</a>#}
+{#                    <a href="#" class="nav-link">Add Post</a>#}
+{#                    <a href="{% url 'details user' pk=user.pk %}" class="nav-link">Profile</a>#}
+{#                    <a href="{% url 'logout' %}" class="nav-link">LogOut</a>#}
+{#                    {% else %}#}
+{#                    <a href="{% url 'register user' %}" class="nav-link">Register</a>#}
+{#                    <a href="{% url 'login user' %}" class="nav-link">Login</a>#}
+{#                    <a href="#" class="nav-link">About</a>#}
+{#                    <a href="#" class="nav-link">Pets</a>#}
+{#                    {% endif %}#}
+{#                </div>#}
+{#            </nav>#}
+{#        </header>#}
+{#        <main>#}
+{#            {% block content %}#}
+{#            {% if user.is_authenticated %}#}
+{#            <p>Welcome to our pet rescue website, where compassion and care come together to find loving homes for adorable furry friends.</p>#}
+{#            {% endif %}#}
+{#            {% endblock %}#}
+{#        </main>#}
+{#    </div>#}
+{#    <footer>#}
+{#        <p>&copy; 2023 PawRescue. Vanesa Kuleva.</p>#}
+{#    </footer>#}
+{#</body>#}
+{##}
+{#</html>#}
