--- a/staticfiles/css/details.css
+++ b/staticfiles/css/details.css
@@ -1,69 +1,51 @@
-#details-wrapper {
-  background-color: rgb(248, 238, 177);
-  margin: 50px auto;
-  height: 75%;
-  width: 80%;
- border-radius: 10px;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2), 0 3px 3px 0 rgba(0, 0, 0, 0.24);
+
+.form button {
+    align-items: center;
+    background-color: #e99056; /* Light pink color */
+    border: 2px solid #1c1106; /* Pink color */
+    border-radius: 8px;
+    box-sizing: border-box;
+    color: #1c1106; /* Pink color */
+    cursor: pointer;
+    display: flex;
+    font-family: 'Quicksand', sans-serif;
+    font-size: 16px;
+    height: 48px;
+    justify-content: center;
+    line-height: 24px;
+    max-width: 100%;
+    padding: 0 25px;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    transition: background-color 0.2s ease;
 }
 
-#details-wrapper img {
-  display: block;
-  margin: 10px auto;
-  height: 30vh;
-  width: 30vh;
+.form button:after {
+    display: none;
 }
 
-#details-title {
-  text-align: center;
-  font-weight: bold;
-  font-size: 20px;
+.form button:hover {
+    background: #eebfa2; /* Pink color */
+    color: #1c1106; /* White text color */
 }
 
-#details-description {
-  width: 95%;
-  margin: 30px auto;
-  height: auto;
-  text-align: center;
-}
-#details-title {
-  font-size: 22px;
+.form button:active {
+    background-color: #fff; /* Whites color */
+    color: #1c1106; /* Pink color */
+    outline: 0;
 }
 
-h4 {
-  text-align: center;
+.form button:focus {
+    background: #1c1106; /* Pink color */
+    border: 2px solid #ff89c0; /* Lighter pink color */
 }
 
-p {
-  text-align: center;
-  font-size: 14px;
-}
-
-span {
-  font-size: 22px;
-}
-
-#action-buttons {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 5px;
-
-}
-
-#action-buttons a {
-  text-decoration: none;
-  margin: auto 50px;
-  margin-bottom: 10px;
-  font-size: 21px;
-  width: 130px;
-  text-align: center;
-  color: white;
-  background: rgb(214, 112, 16);
-  border-radius: 5px;
-}
-#action-buttons a:hover {
-  background: #bd2c2c;
-}
-#nutrition {
-  font-size: 22px;
+.container {
+    position: relative;
+    z-index: 1;
+    max-width: 300px;
+    margin: 0 auto;
 }
