--- a/templates/user/edit-account.html
+++ b/templates/user/edit-account.html
@@ -7,9 +7,15 @@ s
 </head>
 <body>
     <h2>Edit Account</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <form class="form" method="post" action="">
+            {% csrf_token %}
+           {% for field in form %}
+                <div>
+                    <label for="{{ field.id_for_label }}">{{ field.label }}</label>
+                    {{ field }}
+                </div>
+            {% endfor %}
+            {{ form.errors }}
         <button type="submit">Save Changes</button>
     </form>
 </body>
