--- a/templates/user/delete-account.html
+++ b/templates/user/delete-account.html
@@ -1,10 +1,10 @@
 {% extends 'common/index.html' %}
 
 {% block content %}
-  <h1>Delete Account</h1>
-  <p>Are you sure you want to delete your account?</p>
-  <form method="post">
+  <title>Delete Account</title>
+  <h2>Are you sure you want to delete your account?</h2>
+  <form class="form" method="post">
     {% csrf_token %}
-    <input type="submit" value="Delete">
+    <button  type="submit">Yes, Delete my account</button>
   </form>
 {% endblock %}
